# open-fdd

./: .dockerignore  .env.example  .gitattributes  .github-issue-volttron-central-poc.md  .gitignore  .gitleaks.toml  .pylintrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DRIVER_STORAGE_DESIGN.md  DRIVER_TREE_SCHEMA.md  Dockerfile  Dockerfile.local  Dockerfile.mcp  LICENSE  LOCAL_DEV_STATUS.md  MANIFEST.in  MONOREPO_PLAN.md  NOTES.md  README.md  TESTING.md  UNPUSHED_WORK.md  VERIFY_BACNET_NIC.md  VERIFY_BACNET_REALDEAL.md  VERIFY_BACNET_REAL_VS_SIMULATED.md  VERIFY_BENCH_5007_DATAFUSION_SMOKE.md  VERIFY_DRIVER_FRAMEWORK.md  VERIFY_GITHUB_ACTIONS.md  VERIFY_MODBUS.md  VERIFY_REACT_CONTEXT_MENU.md  VERIFY_RUST_AUTH_SECURITY.md  VERIFY_RUST_LOGIN_SCREEN.md  VERIFY_UI_DEFAULT.md  __init__.py  ahu_fc1.py  brick_model.ttl  docker-compose.bacnet-live.yml  docker-compose.local.caddy.yml  docker-compose.local.yml  (+30 more)
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/fdd_bench/: Cargo.toml
crates/fdd_bench/src/: benchmark.rs  compare.rs  lib.rs  parity.rs
crates/fdd_cli/: Cargo.toml
crates/fdd_cli/src/: inventory.rs  main.rs
crates/fdd_core/: Cargo.toml
crates/fdd_core/src/: columns.rs  error.rs  lib.rs  models.rs  role_rank.rs  validate.rs
crates/fdd_csv/: Cargo.toml
crates/fdd_csv/src/: lib.rs  scan.rs
crates/fdd_rules/: Cargo.toml
crates/fdd_rules/src/: analytics.rs  econ4_confirm_test.rs  fc8_gate_test.rs  gate_sql.rs  lib.rs  oracle_harness.rs  oracle_parity_test.rs  params.rs  pid_hunt_test.rs  poll_test.rs  registry.rs  registry_integrity_test.rs  runner.rs  series.rs  status.rs  sv_slew_test.rs  sv_stale_test.rs  tuning.rs
crates/fdd_sql/: Cargo.toml
crates/fdd_sql/src/: lib.rs  session.rs
crates/fdd_store/: Cargo.toml
crates/fdd_store/src/: ingest.rs  lib.rs  meta.rs
crates/openfdd_contracts/: Cargo.toml
crates/openfdd_contracts/src/: command.rs  envelope.rs  lib.rs  topics.rs
crates/openfdd_mqtt/: Cargo.toml
crates/openfdd_mqtt/src/: client.rs  lib.rs  provision.rs  spool.rs
edge/: Cargo.toml
edge/src/: commission_proxy.rs  lib.rs  main.rs  server.rs  test_support.rs  version.rs
edge/src/auth/: audit.rs  config.rs  env_file.rs  jwt.rs  login.rs  mod.rs  password.rs  rbac.rs
edge/src/bench/: config.rs  mod.rs  points.rs  poll.rs  report.rs  smoke.rs  status.rs  validation_fixture.rs
edge/src/connectors/: api.rs  backfill.rs  historian.rs  json_api.rs  json_path.rs  mapping.rs  mod.rs  postgres.rs  registry.rs  secrets.rs  simulation.rs  sql_safety.rs  types.rs
edge/src/control/: cdl.rs  mod.rs
edge/src/csv_ingest/: dataset.rs  mod.rs  package.rs  parquet_bridge.rs  parse.rs  plan.rs  session.rs  timestamp.rs  upload.rs  zip_package.rs
edge/src/dashboard/: building_insight.rs  mod.rs
edge/src/data_management/: mod.rs
edge/src/dev_validation/: api_health.rs  auth_client.rs  browser.rs  fdd_analytics.rs  mod.rs  report_output.rs  runner.rs  sources.rs
edge/src/drivers/: bacnet.rs  bacnet_live.rs  bacnet_server.rs  bacnet_server_runtime.rs  framework.rs  haystack.rs  json_api.rs  live_gate.rs  mod.rs  modbus.rs  modbus_live.rs  tree.rs
edge/src/export/: mod.rs
edge/src/faults/: mod.rs
edge/src/fdd/: confirmation.rs  datafusion_engine.rs  datafusion_sql.rs  execution.rs  mod.rs  registry_api.rs  rules.rs  session_config.rs  sql_safety.rs
edge/src/historian/: arrow_table.rs  bench_telemetry.rs  feather_store.rs  mod.rs  store.rs
edge/src/import/: mod.rs
edge/src/ingest/: commissioning_validate.rs  contract.rs  mod.rs  validate.rs
edge/src/model/: assignments.rs  commissioning.rs  csv_import.rs  csv_workbench.rs  mod.rs  persist.rs  query.rs  rdf.rs  scope.rs  smoke_profile.rs  sparql.rs
edge/src/ops/: agent_chat.rs  agent_config.rs  bridge.rs  codex_relay.rs  cursor_relay.rs  dev_agent.rs  dev_stack.rs  host_stats.rs  mod.rs  ollama.rs
edge/src/reports/: mod.rs
edge/src/timeseries/: mod.rs
edge/src/tls/: mod.rs
edge/src/validation/: audit.rs  dev_profile.rs  mod.rs  profile.rs
edge/tests/: auth_integration.rs  bacnet_live_integration.rs  bench_5007_simulated.rs  commissioning_validate_tests.rs  csv_ingest_tests.rs  csv_lake_geneva_integration.rs  csv_mzvav_integration.rs  csv_pipeline_integration.rs  csv_tadco_env.rs  dashboard_integration.rs  haystack_config.rs  no_hardcode_audit.rs  reports_integration.rs  zip_package_tests.rs
edge/tests/fixtures/: mzvav-2-1-head.csv
mcp/: Cargo.toml  INSTRUCTIONS.md  README.md
mcp/src/: auth.rs  bridge.rs  gate.rs  main.rs  protocol.rs
services/central/: Cargo.toml  Dockerfile
services/central/src/: auth.rs  ingest.rs  main.rs  models.rs  openapi.rs  routes.rs  state.rs
services/central/tests/: csv_fdd_integration.rs  dashboard_api_smoke.rs  zip_package_fdd_integration.rs
services/fieldbus/: AGENTS.md  Cargo.toml  Dockerfile  README.md
services/fieldbus/src/: auth.rs  config.rs  error.rs  main.rs  models.rs  mqtt_bridge.rs  openapi.rs  openapi_bench.rs  openapi_paths.rs  state.rs
services/fieldbus/tests/: bacnet_fd_leak.rs
services/ui/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  data_paths.example.yaml  pyproject.toml  requirements.txt  streamlit_app.py
services/ui/app/: __init__.py  agent_api.py  agent_prerun.py  analytics.py  analytics_baseline.py  bootstrap.py  browser_session.py  cache.py  central_client.py  charts.py  column_map_json.py  config.py  dashboard_contract.py  data_contract.py  data_loader.py  data_model_tree.py  daytypes.py  docx_report.py  load_satisfaction.py  mapping_wizard.py  metering.py  model_seed.py  multi_zip.py  occupancy.py  open_meteo.py  package_io.py  rcx_plots.py  report_downloads.py  reports.py  role_map.py  role_map_gap.py  rule_card.py  rule_plot_meta.py  runtime_intervals.py  sidecar_maps.py  site_model.py  source_profile.py  sql_sources.py  test_central_client_normalize.py  topology_enrich.py  (+7 more)
services/ui/configs/: building_100.yaml  building_100_column_map.json  role_map.yaml  rule_inventory.yaml
services/ui/data/: README.md
services/ui/docs/: BUILD_OPENFDD_PACKAGE.md  (+17 more)
(+3751 files in other folders)
