[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-fdd"
version = "2.4.0"
description = "Open-FDD: YAML engine (open_fdd.engine), portable Python evaluate() sandbox (open_fdd.playground), and optional reports."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ben Bartling", email = "ben.bartling@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
keywords = ["hvac", "fdd", "fault-detection", "building-automation", "pandas", "evaluate", "bacnet"]

dependencies = [
    "pandas",
    "pyyaml",
    "pydantic>=2.4,<3",
]

[project.optional-dependencies]
# Back-compat alias; engine deps are in core dependencies since 2.4.x.
engine = []
reports = [
    "matplotlib",
]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.3.0",
    "pyyaml",
    "pydantic>=2.4,<3",
    "black[jupyter]>=25.11.0",
    "pre-commit",
]
docs = [
    "pyyaml",
    "weasyprint>=62.0",
]

[project.urls]
Homepage = "https://github.com/bbartling/open-fdd"
Documentation = "https://bbartling.github.io/open-fdd/"
Repository = "https://github.com/bbartling/open-fdd"

[tool.setuptools.packages.find]
include = ["open_fdd", "open_fdd.engine*", "open_fdd.schema*", "open_fdd.reports*", "open_fdd.playground*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.pytest.ini_options]
testpaths = ["open_fdd/tests"]
timeout = 300
timeout_method = "thread"
