[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-fdd"
version = "3.1.2"
description = "Arrow-native HVAC fault detection runtime — lint, test, and run apply_faults_arrow rules on columnar telemetry (PyPI). Use GHCR Docker images for the full edge operator stack."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ben Bartling", email = "ben.bartling@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
keywords = ["hvac", "fdd", "fault-detection", "building-automation", "pyarrow", "arrow"]
dependencies = [
    "pyarrow>=17.0.0",
    "pyyaml",
    "pydantic>=2.4,<3",
]

[project.scripts]
open-fdd = "open_fdd.cli:main"

[project.optional-dependencies]
# Future graph ML (Layer B/C) — not used in Rule Lab sandbox.
ml = [
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]
analytics = [
    "numpy>=1.26.0",
]
pandas = [
    "pandas>=2.0.0",
]
release = [
    "build>=1.2.0",
    "twine>=6.0.0",
]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.3.0",
    "pyyaml",
    "pydantic>=2.4,<3",
    "black[jupyter]>=25.11.0",
    "pre-commit",
    "build>=1.2.0",
    "twine>=6.0.0",
]
docs = [
    "pyyaml",
    "weasyprint>=62.0",
]
portfolio = [
    "dash>=2.17",
    "plotly>=5.22",
    "pandas>=2.2",
]
datafusion = [
    "datafusion>=40.0.0",
]

[project.urls]
Homepage = "https://github.com/bbartling/open-fdd"
Documentation = "https://bbartling.github.io/open-fdd/"
Repository = "https://github.com/bbartling/open-fdd"

[tool.setuptools.packages.find]
include = [
    "open_fdd",
    "open_fdd.schema*",
    "open_fdd.playground*",
    "open_fdd.arrow_runtime*",
    "open_fdd.faults*",
]

[tool.setuptools.package-data]
"open_fdd.faults" = ["catalog/*.yaml"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.pytest.ini_options]
testpaths = ["open_fdd/tests"]
timeout = 300
timeout_method = "thread"
