[package]
name = "open_fdd_edge_prototype"
version = "3.2.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bacnet-client = "0.9"
bacnet-encoding = "0.9"
bacnet-transport = "0.9"
bacnet-types = "0.9"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
