[package]
name = "open_fdd_edge_prototype"
version = "3.2.0"
edition = "2021"

[[bin]]
name = "open_fdd_edge_prototype"
path = "src/main.rs"

[[bin]]
name = "openfdd-edge"
path = "src/bin/openfdd_edge.rs"

[dependencies]
arrow = "53"
base64 = "0.22"
bcrypt = "0.16"
bacnet-client = "0.9"
bacnet-encoding = "0.9"
bacnet-transport = "0.9"
bacnet-types = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
datafusion = "43"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
