[package]
name = "open_fdd_edge_prototype"
version = "3.2.7"
edition = "2021"

[[bin]]
name = "open_fdd_edge_prototype"
path = "src/main.rs"

[[bin]]
name = "openfdd-edge"
path = "src/bin/openfdd_edge.rs"

[dependencies]
arrow = "53"
base64 = "0.22"
bcrypt = "0.16"
bytes = "1"
bacnet-client = "0.9"
bacnet-encoding = "0.9"
bacnet-objects = "0.9"
bacnet-services = "0.9"
rusty-bacnet-server = { package = "bacnet-server", version = "0.9" }
bacnet-transport = "0.9"
bacnet-types = "0.9"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
datafusion = "43"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
# rusty-haystack v0.8.1 — git pin (not on crates.io); SCRAM client + Haystack REST codecs.
rusty-haystack-client = { git = "https://github.com/jscott3201/rusty-haystack", rev = "d85e72271e789d3dcf4a90f79adb7d1556faae80", version = "0.8.1" }
rusty-haystack-core = { git = "https://github.com/jscott3201/rusty-haystack", rev = "d85e72271e789d3dcf4a90f79adb7d1556faae80", version = "0.8.1" }
toml = "1.1.2"
once_cell = "1.21.4"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
rusty-modbus-client = { git = "https://github.com/jscott3201/rusty-modbus", version = "0.1.0" }
rusty-modbus-types = { git = "https://github.com/jscott3201/rusty-modbus", version = "0.1.0" }
oxigraph = "0.5"
