[package]
name = "openfdd-mcp"
version.workspace = true
edition = "2021"
description = "Read-first MCP server for Open-FDD Rust edge (stdio transport)"
license = "MIT"
repository = "https://github.com/bbartling/open-fdd"

[[bin]]
name = "openfdd-mcp"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
