[package]
name = "fdd_csv"
description = "Fast CSV tree scanner and timestamp health checks"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
fdd_core = { path = "../fdd_core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
