[package]
name = "openfdd_contracts"
version = "3.3.0"
edition = "2021"
license = "MIT"
description = "Shared Open-FDD MQTT/HTTP Haystack-style contracts"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
utoipa = { version = "5", optional = true, features = ["chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
openapi = ["dep:utoipa"]

[dev-dependencies]
serde_json = "1"
