[package]
name = "openfdd_mqtt"
version = "3.3.0"
edition = "2021"
license = "MIT"
description = "Open-FDD MQTTS client, durable spool, and edge provisioning helpers"

[[bin]]
name = "openfdd-provision"
path = "src/bin/openfdd_provision.rs"

[dependencies]
openfdd_contracts = { path = "../openfdd_contracts" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rcgen = "0.13"
rumqttc = { version = "0.24", default-features = false, features = ["use-native-tls"] }
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
