[package]
name = "open_fdd_desktop_ui"
version = "0.1.0"
description = "Open-FDD Desktop UI (Tauri + React)"
authors = ["open-fdd"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
